--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Phonebook backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -24,7 +25,10 @@
   "homepage": "https://github.com/gabrielRodriguez727/full_stack_open_part3#readme",
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
+    "mongoose": "6.0.8",
+    "mongoose-unique-validator": "^2.0.4",
     "morgan": "1.10.0"
   },
   "devDependencies": {
